@@ -145,6 +145,16 @@ Instance::OnControlPacket(WorkshopControlCommand command,
     switch (command) {
     case WorkshopControlCommand::NOP:
         break;
+
+    case WorkshopControlCommand::VERBOSE:
+        {
+            const auto *log_level = (const uint8_t *)payload.data;
+            if (payload.size != sizeof(*log_level))
+                throw std::runtime_error("Malformed VERBOSE packet");
+
+            SetLogLevel(*log_level);
+        }
+        break;
     }
 }
 
