@@ -1,6 +1,7 @@
 cm4all-workshop (2.0.35) unstable; urgency=low
 
   * added control channel, can be used to send control commands to the daemon
+    - VERBOSE sets log level
   * remove libdaemon dependency
 
  --   
